--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 
 
 #Local Credentials
-spring.datasource.url = jdbc:mysql://localhost:3306/insta
-spring.datasource.username = root
-spring.datasource.password = Aravind@123
+#spring.datasource.url = jdbc:mysql://localhost:3306/insta
+#spring.datasource.username = root
+#spring.datasource.password = Aravind@123
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.show-sql = false
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+spring.datasource.url = jdbc:mysql://bo2ygbvyazakbj5fxhtk-mysql.services.clever-cloud.com/bo2ygbvyazakbj5fxhtk
+spring.datasource.username = uixbgatuncujgxan
+spring.datasource.password = vaixkGrc0ksy6rphUmys
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = false
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
